[SR-15938] Error when referencing #dsohandle in a Swift test on Windows